@@ -1,3 +1,8 @@
+2008-01-17  Ales Hakl  <ales at hakl dot net>
+
+	* src/weak.c (dfsch_weak_reference_dereference): lock allocator
+	when checking for live reference 
+
 2008-01-16  Ales Hakl  <ales at hakl dot net>
 
 	* src/generic.c (dfsch_define_generic): merged ensure-generic into
